Updated background color for login.html

--- a/login.html
+++ b/login.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Login Form</title>
   </head>
-  <body bgcolor="cyan">
+  <body bgcolor="skyblue">
     <h1>Login Form</h1>
   </body>
-</html>
-
+</html>i
